# citetab

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LIABILITY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml  impersonation-scan.yml
docs/: AI_GUARDRAILS.md  ARCHITECTURE.md  INPUT_OUTPUT_SPEC.md  PRD.md  QA_ROUND2.md  QA_ROUND2_RESULTS.md  QA_ROUND3.md  QA_ROUND3_RESULTS.md  REPORT_SPEC.md  _config.yml  comparison.md  faq.md  getting-started.md  index.md  robots.txt  sitemap.xml
docs/_layouts/: default.html
examples/briefs/: README.md  clean_appellate_brief.docx  dirty_motion_brief.docx  marker_trial_memo.docx
examples/reports/: clean_appellate_brief.toa-report.md  dirty_motion_brief.toa-report.md  marker_trial_memo.toa-report.md
freeze/: citetab.iss  citetab.spec  citetab_app.py
launchers/: README.md  toatool-macos.command  toatool-windows.cmd
rules/: CHANGELOG.md
rules/toa/: TT-003-stale-page-numbers.md  TT-004-phantom-toa-entry.md  TT-005-toa-placement-not-found.md  TT-006-marker-heading-conflict.md  TT-008-font-substitution.md
scripts/: check.sh  qa_round2.py  qa_round3.py  reconcile_fixtures.py  regenerate_examples.py
src/citetab/: __init__.py  app.py  cli.py  core.py
src/citetab/_bundled/profiles/: frap.yaml
src/citetab/_bundled/rules/: CHANGELOG.md  README.md
src/citetab/_bundled/rules/toa/: TT-001-unresolved-short-form.md  TT-002-missing-toa-entry.md  TT-004-phantom-toa-entry.md  TT-005-toa-placement-not-found.md  TT-006-marker-heading-conflict.md  TT-007-non-convergence.md
src/citetab/_bundled/schemas/: finding.schema.json  registry.schema.json
src/citetab/engine/: __init__.py  profile_loader.py  resources.py  rule_loader.py  runner.py
src/citetab/models/: __init__.py  finding.py  registry.py
src/citetab/pipeline/: __init__.py  convergence.py  courts.py  extractor.py  input_toa_diff.py  inserter.py  locator.py  parser.py  placement.py  renderer.py  resolver.py  supplemental.py  toa_builder.py  working.py
src/citetab/report/: __init__.py  render.py
src/citetab/rules/: __init__.py  base.py  support.py  tt001.py  tt002.py  tt003.py  tt004.py  tt005.py  tt006.py  tt007.py  tt008.py  tt009.py
src/toatool/: __init__.py  cli.py
src/toatool/_bundled/profiles/: frap.yaml
src/toatool/_bundled/rules/: README.md
src/toatool/_bundled/rules/toa/: TT-001-unresolved-short-form.md  TT-002-missing-toa-entry.md  TT-007-non-convergence.md  TT-009-unlocated-occurrence.md
src/toatool/_bundled/schemas/: finding.schema.json  registry.schema.json
src/toatool/engine/: __init__.py  profile_loader.py  resources.py  rule_loader.py  runner.py
src/toatool/models/: __init__.py  finding.py  registry.py
src/toatool/pipeline/: __init__.py  convergence.py  extractor.py  input_toa_diff.py  inserter.py  locator.py  placement.py  renderer.py  resolver.py  supplemental.py  toa_builder.py  working.py
src/toatool/report/: __init__.py  render.py
src/toatool/rules/: __init__.py  base.py  support.py  tt001.py  tt002.py  tt003.py  tt004.py  tt005.py  tt006.py  tt007.py  tt008.py  tt009.py
tests/: conftest.py
tests/integration/: test_app_headless.py  test_cli.py  test_core.py  test_idempotency.py  test_missing_libreoffice.py  test_pipeline_fixtures.py  test_report_render.py  test_rules_oracle.py
tests/unit/: test_app_import.py  test_convergence_freeze.py  test_finding_model.py  test_input_toa_diff.py  test_parser_extractor.py  test_placement.py  test_profile_loader.py  test_registry_model.py  test_renderer_courts.py  test_renderer_discovery.py  test_renderer_uri.py  test_renderer_version.py  test_report_mask.py  test_resources.py  test_rule_loader.py  test_rules_unit.py  test_supplemental.py  test_toa_builder.py  test_tt007_convergence.py
