[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toatool"
version = "0.1.0"
description = "Free, local-first Table of Authorities generator for legal briefs. Citations parsed with eyecite; page numbers measured from a real LibreOffice render. Drafts for attorney review — not legal advice."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "toatool contributors" }]
keywords = [
  "legal",
  "table-of-authorities",
  "toa",
  "brief",
  "citations",
  "eyecite",
  "docx",
  "legaltech",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Text Processing :: Markup",
  "Typing :: Typed",
]
dependencies = [
  "eyecite>=2.6",
  "python-docx>=1.1",
  "pdfplumber>=0.11",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
  "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
  "types-jsonschema",
]

[project.scripts]
toatool = "toatool.cli:main"

[project.urls]
Homepage = "https://github.com/markhinderliter/TOATool"
Documentation = "https://github.com/markhinderliter/TOATool/tree/main/docs"
Issues = "https://github.com/markhinderliter/TOATool/issues"
Changelog = "https://github.com/markhinderliter/TOATool/blob/main/CHANGELOG.md"

# LibreOffice is a required SYSTEM dependency (headless rendering for
# page measurement). It is not pip-installable and is deliberately not
# listed above. See README "System requirements".

[tool.hatch.build.targets.wheel]
packages = ["src/toatool"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the versioned data so `pip install toatool` works without a
# clone: `toatool rules list/show` reads cards, the engine loads
# profiles and validates findings against the schema. The engine looks
# for rules/profiles in the bundled path first, then any user-supplied
# override path.
"rules" = "toatool/_bundled/rules"
"profiles" = "toatool/_bundled/profiles"
"schemas" = "toatool/_bundled/schemas"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
  "N",   # naming
  "D",   # pydocstyle
]
ignore = [
  "D203", # one-blank-line-before-class (conflicts with D211)
  "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # docstrings optional in tests

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["docx.*", "courts_db.*", "pdfplumber.*", "reporters_db.*"]
ignore_missing_imports = true

# eyecite ships py.typed but leaves model methods (``span``, ``matched_text``)
# unannotated; skip following it so those calls are Any rather than failing
# --strict's no-untyped-call. This is the only third-party seam we lean on for
# behavior rather than types.
[[tool.mypy.overrides]]
module = ["eyecite.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=toatool --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["src/toatool"]
